Use Sequelize for queries

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -3,9 +3,12 @@
   "alcoholic": "alcoholic",
   "almond-milk": "almond milk",
   "cappuccino": "cappuccino",
-  "cappuccino-description": "A delicious treat originating from Austria and developed in Italy. It has equal portions of espresso, whipped milk and milk foam.\nTraditionally, the cappuccino had a cap of milk foam raising above the top of the cup. Nowadays, you will often see the 'latte art' variant of this drink, which follows the same recipe, but with a more gentle pouring technique of the frothed milk.",
+  "cappuccino-description": "A delicious treat originating from Austria and developed in Italy. It has equal portions of espresso, whipped milk and milk foam.\nTraditionally, the cappuccino contained a thick layer of milk foam rising above the top of the cup. Nowadays, you will often see the 'latte art' variant of this drink, which follows the same recipe, but with a more gentle pouring technique of the frothed milk.",
   "cappuccino-type": "type",
   "caramel-syrup": "caramel syrup",
+  "cart-empty": "Your shopping cart is empty",
+  "clear-cart": "clear cart",
+  "close": "close",
   "cocktails": "cocktails",
   "coffee": "coffee",
   "description": "description",
@@ -22,6 +25,7 @@
   "none": "None",
   "oat-milk": "oat milk",
   "options": "options",
+  "order": "order",
   "order-now": "Order now",
   "out-of-stock": "Out of stock",
   "semi-skimmed-milk": "semi skimmed milk",
