--- a/public/locales/nl/translations.json
+++ b/public/locales/nl/translations.json
@@ -3,9 +3,12 @@
   "alcoholic": "alcoholisch",
   "almond-milk": "amandel melk",
   "cappuccino": "cappuccino",
-  "cappuccino-description": "Een heerlijk kopje koffie afkomstig uit Oostenrijk en ontwikkeld in Italië. Het heeft gelijke porties espresso, opgeklopte melk en melkschuim.\nTraditioneel had de cappuccino een kap van melkschuim die boven het kopje uitstak. Tegenwoordig zie je vaak de 'latte art'-variant van deze drank, die hetzelfde recept volgt, maar met een voorzichtigere schenktechniek van de opgeschuimde melk.",
+  "cappuccino-description": "Een heerlijk kopje koffie afkomstig uit Oostenrijk en ontwikkeld in Italië. Het heeft gelijke porties espresso, opgeklopte melk en melkschuim.\nTraditioneel had de cappuccino een dikke laag melkschuim die boven het kopje uitstak. Tegenwoordig zie je vaak de 'latte art'-variant van deze drank, die hetzelfde recept volgt, maar met een voorzichtigere schenktechniek van de opgeschuimde melk.",
   "cappuccino-type": "soort",
   "caramel-syrup": "karamel siroop",
+  "cart-empty": "Je winkelmandje is leeg\\nVoeg wat toe aan je winkelwagen en kom dan terug",
+  "clear-cart": "leegmaken",
+  "close": "sluiten",
   "cocktails": "cocktails",
   "coffee": "koffie",
   "description": "beschrijving",
@@ -22,6 +25,7 @@
   "none": "Geen",
   "oat-milk": "havermelk",
   "options": "opties",
+  "order": "bestellen",
   "order-now": "Nu bestellen",
   "out-of-stock": "Niet op voorraad",
   "semi-skimmed-milk": "halfvolle melk",
@@ -34,7 +38,7 @@
   },
   "tea": "thee",
   "texterify_timestamp": "2021-12-20T20:06:07Z",
-  "toffee-nut-syrup": "Toffee & nootjes siroop",
+  "toffee-nut-syrup": "Toffee hazelnoot siroop",
   "traditional": "traditioneel",
   "vanilla-syrup": "Vanille siroop",
   "whipped-cream": "slagroom",
